--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^7.4.2",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.4.1",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-ionicons": "^4.6.5",
