--- a/package.json
+++ b/package.json
@@ -11,19 +11,26 @@
   },
   "dependencies": {
     "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/datetimepicker": "^8.4.2",
+    "@react-native-firebase/app": "^22.4.0",
+    "@react-native-firebase/auth": "^22.4.0",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-native-vector-icons/ionicons": "^12.0.1",
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@react-navigation/stack": "^7.4.2",
+    "firebase": "^12.0.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.4.1",
     "react-native-gesture-handler": "^2.27.1",
+    "react-native-image-picker": "^8.2.1",
     "react-native-ionicons": "^4.6.5",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.1",
     "react-native-screens": "^4.11.1",
