--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-image-picker": "^8.2.1",
     "react-native-ionicons": "^4.6.5",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.1",
