--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/datetimepicker": "^8.4.2",
     "@react-native-firebase/app": "^22.4.0",
     "@react-native-firebase/auth": "^22.4.0",
+    "@react-native-firebase/storage": "^22.4.0",
     "@react-native-picker/picker": "^2.11.1",
     "@react-native-vector-icons/ionicons": "^12.0.1",
     "@react-native/new-app-screen": "0.80.1",
