--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:supportsRtl="true">
+
+      <meta-data
+        android:name="com.google.android.gms.client_id"
+        android:value="111740839007-6dcip2tbhqvatn5r5nseslm7om54vdur.apps.googleusercontent.com" />
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
