--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/datetimepicker": "^8.4.2",
-    "@react-native-firebase/app": "^22.4.0",
-    "@react-native-firebase/auth": "^22.4.0",
-    "@react-native-firebase/storage": "^22.4.0",
+    "@react-native-firebase/app": "^23.5.0",
+    "@react-native-firebase/auth": "^23.5.0",
+    "@react-native-firebase/storage": "^23.5.0",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-native-picker/picker": "^2.11.1",
     "@react-native-vector-icons/ionicons": "^12.0.1",
     "@react-native/new-app-screen": "0.80.1",
@@ -25,6 +26,7 @@
     "firebase": "^12.0.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-animatable": "^1.4.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.4.1",
     "react-native-gesture-handler": "^2.27.1",
@@ -32,6 +34,7 @@
     "react-native-ionicons": "^4.6.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-paper": "^5.14.5",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "^3.19.1",
     "react-native-safe-area-context": "^5.5.1",
@@ -43,7 +46,7 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "19.0.0",
+    "@react-native-community/cli": "^19.1.2",
     "@react-native-community/cli-platform-android": "19.0.0",
     "@react-native-community/cli-platform-ios": "19.0.0",
     "@react-native/babel-preset": "0.80.1",
